web-infras/parser/tests/fixtures/babel/core/legacy-octal/legacy-octal-after-use-strict/output.txt
[SyntaxError]: Octal literals are not allowed in strict mode (1,15)
1|"use strict"; 04; 05;
 |             ^
[SyntaxError]: Octal literals are not allowed in strict mode (1,19)
1|"use strict"; 04; 05;
 |                 ^
